crates/aven-check/tests/fixtures/check/invalid/wide-value-into-literal-union.av
text : Text = "waiting"
number : Int = 1

status : @{"waiting", "running"} = text
code : @{0, 1, 2} = number
spelled : "waiting" | "running" = text
